# WinRS-DCX

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile.build  GEMINI.md  PYTHON.md  README.md  build.cmd  package-lock.json  package.json  search_results.txt  start.bat
dcx-parser/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
dcx-parser/src/: dcx-file.ts  edit-buffer-parser.ts  index.ts  parser-utils.ts  preset-parser.ts  status-parser.ts  structure.ts
dcx-parser/src/commands/: builders.ts  commands.ts
dcx-parser/src/constants/: index.ts  protocol.ts
dcx-parser/src/model/: byte-offsets.test.ts  byte-offsets.ts  param-lookup.ts
dcx-parser/src/protocol/: checksum.test.ts  checksum.ts  encoding.test.ts  encoding.ts  sysex.test.ts  sysex.ts
dcx-parser/src/state/: device-state-buffer.test.ts  device-state-buffer.ts  preset-buffer.test.ts  (+1 more)
dcx-ui/: Cargo.toml  Dioxus.toml
dcx-ui-new/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dcx-ui-new/src/: App.css  App.tsx  connection.tsx  index.tsx  router.tsx
dcx-ui/src/: api.rs  main.rs
duinodcx-management.exe.WebView2/EBWebView/: Local State  VariationsRuntimeSeedV2  VariationsSeedV2
duinodcx-rs/: Cargo.toml  build.rs
duinodcx-rs/src/: connection_manager.rs  locations.rs  main.rs  ultradrive.rs
duinodcx-rs/src/api/: mod.rs  routes.rs  ui.rs  ws.rs
firmware/DuinoDCX/: StaticFiles.h
openwrt/: Makefile
openwrt/files/: duinodcx.init
scripts/: SerialList.bat  build.cmd  cross-build.sh  start.bat
(+164 files in other folders)
